proj2/test/test_11712009_6.out
Error type 6 at Line 2: LHS of assignment is not a left value.
