proj2/test/test_11712009_6.spl
int main(int a, int b) {
    1 = a;
}